// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Label should render fixed label correctly 1`] = `
<View
  accessibilityLabel="fixed-label-box"
  accessible={true}
  style={
    Array [
      Object {
        "flexDirection": "row",
        "marginBottom": 4,
      },
    ]
  }
  testID="fixed-label-box"
>
  <Text
    accessibilityLabel="fixed-label"
    accessible={true}
    style={
      Array [
        Object {
          "color": "#6E7787",
          "fontFamily": "Rubik-Medium",
          "fontSize": 12,
          "fontWeight": "500",
          "lineHeight": 14,
        },
      ]
    }
    testID="fixed-label"
  >
    Label
  </Text>
</View>
`;

exports[`Input Label should render fixed label with optional correctly 1`] = `
<View
  accessibilityLabel="fixed-label-box"
  accessible={true}
  style={
    Array [
      Object {
        "flexDirection": "row",
        "marginBottom": 4,
      },
    ]
  }
  testID="fixed-label-box"
>
  <Text
    accessibilityLabel="fixed-label"
    accessible={true}
    style={
      Array [
        Object {
          "color": "#6E7787",
          "fontFamily": "Rubik-Medium",
          "fontSize": 12,
          "fontWeight": "500",
          "lineHeight": 14,
        },
      ]
    }
    testID="fixed-label"
  >
    Label
  </Text>
  <Text
    accessibilityLabel="optional-fixed-label"
    accessible={true}
    style={
      Array [
        Object {
          "color": "#95A1B5",
          "fontFamily": "Rubik-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginLeft": 2,
        },
      ]
    }
    testID="optional-fixed-label"
  >
    (Optional)
  </Text>
</View>
`;

exports[`Input Label should render null when not has a label 1`] = `null`;

exports[`Input Label should render outlined label correctly 1`] = `
<View
  collapsable={false}
  pointerEvents="none"
  style={Object {}}
>
  <View
    accessibilityLabel="outlined-label-box"
    accessible={true}
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 54,
        },
      ]
    }
    testID="outlined-label-box"
  >
    <Text
      collapsable={false}
      style={Object {}}
    >
      Label
      
    </Text>
  </View>
</View>
`;

exports[`Input Label should render outlined label with optional correctly 1`] = `
<View
  collapsable={false}
  pointerEvents="none"
  style={Object {}}
>
  <View
    accessibilityLabel="outlined-label-box"
    accessible={true}
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 54,
        },
      ]
    }
    testID="outlined-label-box"
  >
    <Text
      collapsable={false}
      style={Object {}}
    >
      Label
       (Optional)
    </Text>
  </View>
</View>
`;
